# CuentaService/src/main/java/com/johnjqc/devsu/cuenta/service/dto/AccountStatementAccountDto.java
@@ -1,0 +1,22 @@
+package com.johnjqc.devsu.cuenta.service.dto;
+
+import java.math.BigDecimal;
+import java.util.List;
+
+public record AccountStatementAccountDto(
+
+        Long accountId,
+
+        String accountNumber,
+
+        String accountType,
+
+        Boolean status,
+
+        BigDecimal openingBalance,
+
+        BigDecimal closingBalance,
+
+        List<AccountStatementTransactionDto> transactions
+) {
+}
